# rust-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cargo-generate.toml
.github/workflows/: build.yml
src/: main.rs
